--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-VOL_PREFIX: /tmp
+VOL_PREFIX: ./data
 GAMUTRF: gamutrf
 TORCHSERVE: torchserve
-FREQ_START: 5e9
-FREQ_END: 6e9
+FREQ_START: 2400000000
+FREQ_END: 0
+#FREQ_END: 2500000000
